update README, more tests, nits

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 localCacheExpirySeconds=5
 redisCacheExpirySeconds=60
 cacheSize=1000
-redisHostName=redis
+redisHostName=localhost
 redisPort=6379
 server.tomcat.threads.max=200
 server.tomcat.accept-count=100
